--- a/style.css
+++ b/style.css
@@ -40,6 +40,20 @@ nav ul li a{
     text-decoration: none;
     color: aliceblue;
 }
+.hamburger{
+    display: none;
+    cursor: pointer;
+}
+.bar{
+    display: block;
+    width: 25px;
+    height: 3px;
+    margin: 5px auto;
+    margin-left: 12rem;
+    -webkit-transition: all 0,3s ease-in-out;
+    transition: all 0.3s ease-in-out;
+    background-color: white;
+}
 .message{
     width: 30%;
     height: 40vh;
@@ -72,11 +86,9 @@ nav ul li a{
 }
 .left{
     width: 50%;
-    position: relative;
-}
-.left img{
-    width: 100%;
     height: 60vh;
+    background-image: url(/images/desktop/image-interactive.jpg);
+    position: relative;
 }
 .right{
     width: 35%;
@@ -85,7 +97,7 @@ nav ul li a{
     padding-left: 60px;
     padding-right: 25px;
     position: absolute;
-    right: 14rem;
+    right: 10rem;
     top: 47rem;
     background-color: hsl(0, 0%, 100%);
 }
@@ -267,10 +279,8 @@ nav ul li a{
         height: 35vh;
         padding-top: 60px;
         padding-left: 60px;
+        right: 6rem;
         padding-right: 25px;
-        position: absolute;
-        right: 9rem;
-        top: 45.6rem;
         background-color: hsl(0, 0%, 100%);
     }
     .same{
@@ -278,6 +288,12 @@ nav ul li a{
         font-size: 30px;
         margin-top: 19rem;
         text-align: center;
+    }
+    .left{
+        width: 60%;
+        height: 60vh;
+        background-image: url(/images/desktop/image-interactive.jpg);
+        position: relative;
     }
 }
 
@@ -298,6 +314,35 @@ nav ul li a{
         column-gap: 19px;
         justify-content: space-between;
     }
+    .hamburger{
+        display: block;
+    }
+    .hamburger.active .bar:nth-child(2){
+        opacity: 0;
+    }
+    .hamburger.active .bar:nth-child(1){
+        transform: translateY(8px) rotate(45deg);
+    }
+    .hamburger.active .bar:nth-child(3){
+        transform: translateY(-8px) rotate(-45deg);
+    }
+    ul{
+        position: fixed;
+        left: -100%;
+        top: 3px;
+        gap: 0;
+        flex-direction: column;
+        background-color: #50074c;
+        width: 100%;
+        text-align: center;
+        transition: 0.3s;
+    } 
+    li{
+        margin: 16px 0;
+    }
+    ul.active{
+        left: 0;
+    }
     .message{
         width: 30%;
         height: 35vh;
@@ -312,9 +357,18 @@ nav ul li a{
     }
 
     /* ------next face----- */
+    .over{
+        width: 80%;
+        height: 60vh;
+        margin: auto;
+        margin-top: 5rem;
+        margin-bottom: 5rem;
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+    }
     .left{
         width: 60%;
-        position: relative;
     }
     .right{
         width: 40%;
@@ -322,9 +376,6 @@ nav ul li a{
         padding-top: 60px;
         padding-left: 60px;
         padding-right: 25px;
-        position: absolute;
-        right: 2rem;
-        top: 45.6rem;
         background-color: hsl(0, 0%, 100%);
     }
     .right h2{
@@ -342,5 +393,164 @@ nav ul li a{
         font-size: 30px;
         margin-top: 19rem;
         text-align: center;
+    }
+}
+
+@media only screen and (max-width: 550px) {
+    .container{
+    width: 100%;
+    height: 80vh;
+    margin: auto;
+    background: linear-gradient(0deg, rgba(6, 6, 7, 0.432), rgba(6, 6, 7, 0.644)), url(/images/mobile/image-hero.jpg);
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: center;
+}
+    .header{
+        width: 80%;
+        height: 20vh;
+        margin: auto;
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+    }
+    .message{
+        width: 30%;
+        height: 20vh;
+        margin-left: 6rem;
+        margin-top: 4rem;
+        padding-left: 5px;
+        border: 2px solid hsl(0, 0%, 100%);
+    }
+    .message h1{
+        font-size: 29px;
+        color: hsl(0, 0%, 100%);
+    }
+    /* ------next face----- */
+    .over{
+        width: 95%;
+        height: 60vh;
+        margin: auto;
+        margin-top: 5rem;
+        margin-bottom: 5rem;
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+    }
+    .right{
+        width: 78%;
+        height: 35vh;
+        top: 63rem;
+        left: .5rem;
+    }
+    .right h2{
+        font-size: 40px;
+        text-align: center;
+        font-family:Arial, Helvetica, sans-serif;
+        font-weight: 100;
+    }
+    .right p{
+        font-size: 25px;
+        text-align: center;
+        font-family:Arial, Helvetica, sans-serif;
+        margin-top: 1rem;
+    }
+    .left{
+        width: 100%;
+        background-color: #50074c;
+        background-image: url(/images/mobile/image-interactive.jpg);
+    }
+    .small_container{
+        width: 100%;
+        margin-top: 25rem;
+    }
+    .images1{
+        display: flex;
+        flex-direction: column;
+        flex-wrap: wrap;
+        justify-content: center;
+    }
+    .images2{
+        display: flex;
+        flex-direction: column;
+        flex-wrap: wrap;
+        justify-content: center;
+    }
+    .same{
+        color: aliceblue;
+        font-size: 35px;
+        margin-top: 4rem;
+        padding-left: 3rem;
+        text-align: left;
+    }
+    .col1{
+        width: 100%;
+        height: 25vh;
+        background: linear-gradient(0deg, rgba(6, 6, 7, 0.432), rgba(6, 6, 7, 0.644)), url(/images/desktop/image-deep-earth.jpg);
+        background-repeat: no-repeat;
+        background-size: cover;
+        background-position: center;
+    }
+    .col2{
+        width: 100%;
+        height: 25vh;
+        margin-top: 2rem;
+        background: linear-gradient(0deg, rgba(6, 6, 7, 0.432), rgba(6, 6, 7, 0.644)), url(/images/desktop/image-night-arcade.jpg);
+        background-repeat: no-repeat;
+        background-size: cover;
+        background-position: center;
+    }
+    .col3{
+        width: 100%;
+        height: 25vh;
+        margin-top: 2rem;
+        background: linear-gradient(0deg, rgba(6, 6, 7, 0.432), rgba(6, 6, 7, 0.644)), url(/images/desktop/image-soccer-team.jpg);
+        background-repeat: no-repeat;
+        background-size: cover;
+        background-position: center;
+    }
+    .col4{
+        width: 100%;
+        height: 25vh;
+        margin-top: 2rem;
+        background: linear-gradient(0deg, rgba(6, 6, 7, 0.432), rgba(6, 6, 7, 0.644)), url(/images/desktop/image-grid.jpg);
+        background-repeat: no-repeat;
+        background-size: cover;
+        background-position: center;
+    }
+    .col5{
+        width: 100%;
+        height: 25vh;
+        background: linear-gradient(0deg, rgba(6, 6, 7, 0.432), rgba(6, 6, 7, 0.644)), url(/images/desktop/image-from-above.jpg);
+        background-repeat: no-repeat;
+        background-size: cover;
+        background-position: center;
+    }
+    .col6{
+        width: 100%;
+        height: 25vh;
+        margin-top: 2rem;
+        background: linear-gradient(0deg, rgba(6, 6, 7, 0.432), rgba(6, 6, 7, 0.644)), url(/images/desktop/image-pocket-borealis.jpg);
+        background-repeat: no-repeat;
+        background-size: cover;
+        background-position: center;
+    }
+    .col7{
+        width: 100%;
+        height: 25vh;
+        margin-top: 2rem;
+        background: linear-gradient(0deg, rgba(6, 6, 7, 0.432), rgba(6, 6, 7, 0.644)), url(/images/desktop/image-curiosity.jpg);
+        background-repeat: no-repeat;
+        background-size: cover;
+        background-position: center;
+    }
+    .col8{
+        width: 100%;
+        height: 25vh;
+        margin-top: 2rem;
+        background: linear-gradient(0deg, rgba(6, 6, 7, 0.432), rgba(6, 6, 7, 0.644)), url(/images/desktop/image-fisheye.jpg);
+        background-repeat: no-repeat;
+        background-size: cover;
+        background-position: center;
     }
 }
